syntax = "proto3";

import "google/protobuf/wrappers.proto";

import "schema/VPResult/prdb_meta.proto";
import "schema/SensorData/vp_tracking.proto";
import "schema/SensorData/vp_msg.proto";

package vpresult;

option java_package = "vp.service";
option go_package = "github.com/sysmoon/vps-grpc-gatewayschema/VPResult";

service LocationService {
	rpc getLocationPose (vpdata.VPData) returns (VPService_t) {}

	rpc getLocationInfo (vpdata.VPData) returns (.google.protobuf.FloatValue) {} // For later, multi rpc test
}

message VPService_t {
	prdb.meta.Meta_t stVPResult = 1;

	// Newly added members for Tracking Mode
	vp.tracking.MetaTrackingMode_t stVPResultTrackingMode = 2;
}